# agent-install-monitor

./: .gitignore  README.md  install.py  pyproject.toml
.github/workflows/: bump-version.yml  ci.yml  release-on-merge.yml  release.yml
scripts/: bump_version.py
src/agent_install_monitor/: __init__.py  cli.py  db.py  detector.py
tests/: test_bump_version.py  test_db.py  test_detector.py
